@@ -2,56 +2,145 @@ package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.practicum.shareit.booking.dto.BookingShortDto;
+import ru.practicum.shareit.booking.mapper.BookingMapper;
+import ru.practicum.shareit.booking.repository.BookingRepository;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
+import ru.practicum.shareit.item.dto.ItemWithBookingsDto;
+import ru.practicum.shareit.item.mapper.CommentMapper;
 import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.item.util.ItemValidator;
+import ru.practicum.shareit.request.model.ItemRequest;
+import ru.practicum.shareit.request.repository.RequestRepository;
+import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
-    private final ItemRepository items;
-    private final UserRepository users;
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
+    private final RequestRepository requestRepository;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
     @Override
-    public ItemDto create(ItemDto dto, Long ownerId) {
+    public ItemDto create(Long ownerId, ItemDto dto) {
         ItemValidator.validator(dto);
-        users.findById(ownerId).orElseThrow(() -> new NotFoundException("Владелец не найден"));
-        Item saved = items.save(ItemMapper.fromDto(dto, ownerId));
-        return ItemMapper.toDto(saved);
+
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new NotFoundException("Поьзователь не найден"));
+
+        ItemRequest request = dto.getRequestId() != null
+                ? requestRepository.findById(dto.getRequestId())
+                .orElseThrow(() -> new RuntimeException("Запрос не найден"))
+                : null;
+
+        Item item = ItemMapper.toEntity(dto, owner, request);
+        return ItemMapper.toDto(itemRepository.save(item));
     }
 
     @Override
-    public ItemDto update(Long itemId, ItemDto partial, Long ownerId) {
-        Item existing = items.findById(itemId).orElseThrow(() -> new NotFoundException("Вещь не найдена"));
-        if (existing.getOwner() == null || !existing.getOwner().getId().equals(ownerId))
-            throw new NotFoundException("Только владелец может редактировать");
-        if (partial.getName() != null) existing.setName(partial.getName());
-        if (partial.getDescription() != null) existing.setDescription(partial.getDescription());
-        if (partial.getAvailable() != null) existing.setAvailable(partial.getAvailable());
-        return ItemMapper.toDto(items.update(existing));
+    public ItemDto update(Long ownerId, Long itemId, ItemDto dto) {
+
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Вещь не найдена"));
+
+        if (!item.getOwner().getId().equals(ownerId)) {
+            throw new NotFoundException("Не владелец");
+        }
+
+        if (dto.getName() != null && !dto.getName().isBlank()) {
+            item.setName(dto.getName());
+        }
+
+        if (dto.getDescription() != null && !dto.getDescription().isBlank()) {
+            item.setDescription(dto.getDescription());
+        }
+
+        if (dto.getAvailable() != null) {
+            item.setAvailable(dto.getAvailable());
+        }
+
+        return ItemMapper.toDto(itemRepository.save(item));
     }
 
     @Override
-    public ItemDto get(Long itemId, Long requesterId) {
-        Item i = items.findById(itemId).orElseThrow(() -> new NotFoundException("Вещь не найдена"));
-        return ItemMapper.toDto(i);
+    public ItemWithBookingsDto getById(Long userId, Long itemId) {
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new RuntimeException("Вещь не найдена"));
+
+        BookingShortDto lastBooking = null;
+        BookingShortDto nextBooking = null;
+
+        if (item.getOwner().getId().equals(userId)) {
+            lastBooking = bookingRepository
+                    .findFirstByItem_IdAndStartBeforeOrderByEndDesc(itemId, LocalDateTime.now())
+                    .map(BookingMapper::toShortDto)
+                    .orElse(null);
+
+            nextBooking = bookingRepository
+                    .findFirstByItem_IdAndStartAfterOrderByStartAsc(itemId, LocalDateTime.now())
+                    .map(BookingMapper::toShortDto)
+                    .orElse(null);
+        }
+
+        List<CommentDto> comments = commentRepository.findByItemId(itemId)
+                .stream()
+                .map(CommentMapper::toDto)
+                .toList();
+
+        return ItemMapper.toDtoWithBookings(item, lastBooking, nextBooking, comments);
     }
 
     @Override
-    public List<ItemDto> getOwnerItems(Long ownerId) {
-        users.findById(ownerId).orElseThrow(() -> new NotFoundException("Владелец не найден"));
-        return items.findAllByOwnerId(ownerId).stream().map(ItemMapper::toDto).collect(Collectors.toList());
+    public List<ItemWithBookingsDto> getUserItems(Long ownerId) {
+        return itemRepository.findByOwnerId(ownerId)
+                .stream()
+                .map(item -> getById(ownerId, item.getId()))
+                .toList();
     }
 
     @Override
     public List<ItemDto> search(String text) {
-        return items.searchAvailableByText(text).stream().map(ItemMapper::toDto).collect(Collectors.toList());
+        if (text.isBlank()) return List.of();
+        return itemRepository.search(text)
+                .stream()
+                .map(ItemMapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public CommentDto addComment(Long userId, Long itemId, CommentDto dto) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new RuntimeException("Вещь не найдена"));
+
+        // проверка, что юзер бронировал вещь
+        boolean hasBooking = bookingRepository.existsByBooker_IdAndItem_IdAndEndBefore(
+                userId, itemId, LocalDateTime.now());
+
+        if (!hasBooking) {
+            throw new RuntimeException("Пользователь не забронировал этот товар");
+        }
+
+        Comment comment = Comment.builder()
+                .text(dto.getText())
+                .item(item)
+                .author(user)
+                .created(LocalDateTime.now())
+                .build();
+
+        return CommentMapper.toDto(commentRepository.save(comment));
     }
 }
